2015-01-22  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed test fix after r178965.

        * WebView.cpp: Supply missing implementation of 'setEditable'. It
        currently asserts, causing all debug tests to fail.

2015-01-22  peavo@outlook.com  <peavo@outlook.com>

        [Win] No plugin content on some sites.
        https://bugs.webkit.org/show_bug.cgi?id=140780

        Reviewed by Anders Carlsson.

        Add override modifier to bindingInstance method.

        * Plugins/PluginView.h:

2015-01-22  Brent Fulgham  <bfulgham@apple.com>

        [Win] Expose missing editing features through WebView interface
        https://bugs.webkit.org/show_bug.cgi?id=140773
        <rdar://problem/19565421>

        Reviewed by Dean Jackson.

        Connect the various WebView editing delegate methods to our
        test infrastructure. Also prefer _bstr_t to raw BSTR types
        to simplify life cycle management.

        * DOMCoreClasses.cpp: Flesh out the DOMRange object.
        (DOMElement::createInstance):
        (DOMRange::QueryInterface):
        (DOMRange::DOMRange):
        (DOMRange::~DOMRange):
        (DOMRange::createInstance):
        (DOMRange::startContainer):
        (DOMRange::startOffset):
        (DOMRange::endContainer):
        (DOMRange::endOffset):
        (DOMRange::collapsed):
        (DOMRange::commonAncestorContainer):
        (DOMRange::setStart):
        (DOMRange::setEnd):
        (DOMRange::setStartBefore):
        (DOMRange::setStartAfter):
        (DOMRange::setEndBefore):
        (DOMRange::setEndAfter):
        (DOMRange::collapse):
        (DOMRange::selectNode):
        (DOMRange::selectNodeContents):
        (DOMRange::compareBoundaryPoints):
        (DOMRange::deleteContents):
        (DOMRange::extractContents):
        (DOMRange::cloneContents):
        (DOMRange::insertNode):
        (DOMRange::surroundContents):
        (DOMRange::cloneRange):
        (DOMRange::toString):
        (DOMRange::detach):