@@ -1,5 +1,16 @@
 2015-01-23  Brent Fulgham  <bfulgham@apple.com>
 
+        [Win] Teach WebKit to provide IAccessible2 'get_language' and access AXLanguage
+        https://bugs.webkit.org/show_bug.cgi?id=140839
+
+        Reviewed by Dean Jackson.
+
+        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
+        (AccessibilityUIElement::language): Retrieve the 'language' BSTR
+        from the IA2Locale structure and pass it to DRT.
+
+2015-01-23  Brent Fulgham  <bfulgham@apple.com>
+
         [Win] Update DRT Accessibility implementation to better match Mac.
         https://bugs.webkit.org/show_bug.cgi?id=140830
 
